@@ -1,3 +1,9 @@
+2011-09-13  Revital Eres  <revital.eres@linaro.org>
+
+	modulo-sched.c (remove_node_from_ps): Return void instead of bool.
+	(optimize_sc): Adjust call to remove_node_from_ps.
+	(sms_schedule): Add print info.
+
 2011-09-13  Bernd Schmidt  <bernds@codesourcery.com>
 
 	* rtl.c (copy_rtx): Do not handle frame_related, jump or call
